--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "md-to-adf-dailykos",
-  "version": "0.1.0-semantically-released",
+  "version": "0.1.0",
   "description": "Translate Markdown (Github) into Atlassian Document Format (ADF)",
   "main": "dist/index.js",
   "scripts": {
